update .net samples
* bump Flow.Launcher.Plugin version to 1.2.2
* add attribute to project files to output all DLLs
* add SatelliteResourceLanguages attribute to the F# sample

--- a/HelloWorldCSharp/HelloWorldCSharp.csproj
+++ b/HelloWorldCSharp/HelloWorldCSharp.csproj
@@ -8,6 +8,7 @@
     <AssemblyName>HelloWorldCSharp</AssemblyName>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <ApplicationIcon />
     <OutputType>Library</OutputType>
     <StartupObject />
@@ -23,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Flow.Launcher.Plugin" Version="1.0.0" />
+    <PackageReference Include="Flow.Launcher.Plugin" Version="1.2.2" />
   </ItemGroup>
 
 </Project>
