change to single python env

--- a/HelloWorldPython/.github/workflows/Publish Release.yml
+++ b/HelloWorldPython/.github/workflows/Publish Release.yml
@@ -10,9 +10,9 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8]
+    env:
+      python_ver: 3.8
+
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
